--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">bezKoder</a>
+  <nav class="navbar navbar-expand navbar-dark bg-primary">
+    <a href="#" class="navbar-brand">admisiones-UV</a>
     <div class="navbar-nav mr-auto">
+      <!--
       <li class="nav-item">
         <a routerLink="tutorials" class="nav-link">Tutorials</a>
-      </li>
+      </li> -->
+      
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add</a>
+        <a routerLink="add" class="nav-link">Registrarse</a>
       </li>
     </div>
   </nav>
