--- a/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/src/app/components/tutorials-list/tutorials-list.component.html
@@ -8,7 +8,7 @@
         [class.active]="i == currentIndex"
         (click)="setActiveTutorial(tutorial, i)"
       >
-        {{ tutorial.title }}
+        {{ tutorial.appPaterno }}
       </li>
     </ul>
   </div>
