--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <nav class="navbar navbar-expand navbar-dark bg-primary">
     <a href="#" class="navbar-brand">admisiones-UV</a>
     <div class="navbar-nav mr-auto">
-      <!--
+      
       <li class="nav-item">
-        <a routerLink="tutorials" class="nav-link">Tutorials</a>
-      </li> -->
+        <a routerLink="tutorials" class="nav-link">Consultas</a>
+      </li> 
       
       <li class="nav-item">
         <a routerLink="add" class="nav-link">Registrarse</a>
