--- a/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/src/app/components/tutorials-list/tutorials-list.component.html
@@ -1,6 +1,27 @@
 <div class="list row">
   <div class="col-md-6">
-    <h4>Tutorials List</h4>
+    
+    <div class="form-group">
+      <label for="description">Filtrar por Carrera </label>
+      <select
+        class="form-control"
+        id="programaInteres"
+        required
+        [(ngModel)]="programaInteres"
+        name="programaInteres"
+        (change)="retrieveTutorialsByProgram()"
+      >
+      <option value="lae">Lic. en Administracion de Empresas</option>
+      <option value="conta">Lic. en Contaduria</option>
+      <option value="gestion">Gestion y direccion de negocios</option>
+      <option value="isw">Ing. de software</option>
+      <option value="ltio">Lic. Tecnologias de la Informacion en las Org.</option>
+      <option value="cspol">Lic. en Ciencias Politicas y Gestion Publica</option>
+      
+      </select>
+    </div>
+
+    <h3>{{n}} estudiantes </h3>
     <ul class="list-group">
       <li
         class="list-group-item"
@@ -8,7 +29,7 @@
         [class.active]="i == currentIndex"
         (click)="setActiveTutorial(tutorial, i)"
       >
-        {{ tutorial.appPaterno }}
+       {{i+1}}  {{tutorial.appPaterno}}-{{tutorial.appMaterno}}, {{tutorial.nombre}}
       </li>
     </ul>
   </div>
@@ -22,7 +43,7 @@
 
     <div *ngIf="!currentTutorial">
       <br />
-      <p>Please click on a Tutorial...</p>
+      <p>Seleccione un estudiante ...</p>
     </div>
   </div>
 </div>
